Update class title for February 4 session

--- a/index.html
+++ b/index.html
@@ -432,7 +432,7 @@
       </div>
       <div class="class-content">
         <div class="class-date">📅 4 de febrero · 7:00 PM (NY)</div>
-        <h3>Psicología del Emprendimiento</h3>
+        <h3>Como tu Psicología Impacta tu Negocio</h3>
         <p>
           Sesión enfocada en claridad mental y gestión emocional para emprender: identificación de bloqueos,
           fortalecimiento del enfoque, toma de decisiones bajo presión y hábitos que sostienen el crecimiento.
